src/imageboard/static/imageboard/style.less
/* ... */
.sidebar {
  width: 300px;
  position: absolute;
  right: 0;

  &__thread {
    text-decoration: none;
    color: inherit;
    position: relative;
    height: 50px;

    margin: 10px 0;
    display: flex;

    font-size: 12px;
    line-height: 15px;
    background: @main-bg;
    border-radius: @block-border-radius;
    .item-shadow;
    overflow: hidden;
  }

  &__thread-image {
    width: 50px;
    height: 50px;

    border-radius: @block-border-radius 0 0 @block-border-radius;
    background-size: cover;
  }

  &__thread-text {
    padding: 0 10px;
  }
}


.catalog {
  &__items {
  }
}

.catalog-item {
  width: 100%;
  height: 50px;
  margin: 10px 0;
  padding: 5px 10px 5px 110px;
  background: @main-bg;
  color: @main-color;
  border-radius: @block-border-radius;
  .item-shadow;
  cursor: pointer;
  text-decoration: none;
  display: block;
  position: relative;
  font-size: 12px;

  //&:hover {
  //  box-shadow: inset 0 0 0 2px @accent-color, 1px 2px 3px rgba(0,0,0, 0.3);
  //}

  &__hid {
  }

  &__image {
    position: absolute;
    width: 100px;
    height: 50px;
    top: 0;
    left: 0;
    background-repeat: no-repeat;
    background-position: center 25%;
    background-size: cover;
    background-color: #ccc;
    border-radius:  @block-border-radius 0 0 @block-border-radius;

    &--empty {
      text-align: center;
      color: @disabled-color;
      font-weight: bold;
      padding: 5px;
    }
  }

  &__title {
    font-weight: bold;
  }

  &__header {
    height: 20px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }

  &__meta {
    height: 20px;
    font-size: 12px;
  }

  &__meta-label {
    font-weight: bold;
  }

  &__meta-separator {
    &:after {
      content: ' / '
    }

  }

  &__text {
    p, blockquote {
      display: inline;
      margin: 0;
    }
  }
}


.posting-form {
  width: 100%;
  background: @main-bg;
  color: @main-color;
  padding: 10px 20px;
  margin: 20px 0;
  border-radius: @block-border-radius;
  .item-shadow;

  &__inner {
    max-width: 800px;
    margin: 0 auto;
  }

  &__header {
    border-bottom: 1px dotted;
    margin-bottom: 10px;
    padding-bottom: 10px;
    text-align: center;
    font-size: 20px;
    font-weight: bold;
  }

  &__field {
    display: flex;
    margin: 5px 0;
    width: 100%;
    align-items: start;
  }

  label {
    display: block;
    text-align: right;
    width: 80px;
    //padding-right: 10px;
    font-size: inherit;
    height: 20px;
    line-height: 16px;
    padding: 2px 10px 2px 0;
    flex: 0 0 auto;
  }

  input, textarea {
    font-family: inherit;
    font-size: inherit;
  }

  input[type="text"], textarea {
    padding: 1px 3px;
    border: 1px solid @field-border;
    border-radius: @input-border-radius;
    line-height: 16px;
    background: @field-bg;
    color: @main-color;
    margin-top: 0;
    margin-bottom: 0;
    flex: 1 0 auto;

    &:focus {
      border-color: @field-focus;
    }
  }

  textarea {
    resize: vertical;
    height: 130px;
  }

  &__buttons {
    border-top: 1px dotted;
    margin-top: 10px;
    padding-top: 10px;
    text-align: center;
  }

  &__submit {
    text-align: center;
    display: inline-block;
    color: @button-color;
    background: @button-bg;
    border-radius: @input-border-radius;
    height: 30px;
    padding: 5px 10px;
    border: none;
    cursor: pointer;
    font: inherit;

    &:hover {
      box-shadow: inset 0 0 0 2px @accent-color;
    }
  }
}


.footer {
  width: 100%;
  position: fixed;
  height: 20px;
  bottom: 0;
  left: 0;
  background: @header-bg-2;
  box-shadow: 1px -2px 3px rgba(0,0,0, 0.3);
  z-index: 2;

  &__inner {
    color: @header-color;
    background: @header-bg;
    padding: 0 20px;

    margin: 0 auto;
    width: 960px;
    height: 40px;
    //border-radius: @block-border-radius @block-border-radius 0 0;
  }

  a {
    color: inherit;
  }

  &__page {
    margin-right: 5px;

    &--current {
      color: @accent-color;
    }
  }
}


.paginator {
}


.placeholder-item {
  padding: 10px 20px;
  color: @disabled-color;

  &--thread {
    background: @main-bg;
    margin: 20px 0;
    border-radius: @block-border-radius;
    .item-shadow;
  }

  &__deleted-label {}

  &__hid {
  }

  &__text {
    margin-right: 10px;
  }

  &__unhide-link {
    border-bottom: 1px dotted;
    cursor: pointer;
  }
}


.board-header {
  width: 100%;
  margin: 20px 0;
  padding: 10px 20px;
  background: @main-bg;
  color: @main-color;
  border-radius: @block-border-radius;
  display: block;
  text-decoration: none;
  .item-shadow;

  &__title {
    line-height: 40px;
    font-size: 40px;
    font-weight: bold;
  }

  &__description {
    margin-top: 10px;
  }

  p {
    margin: 0;
  }
}

.lockdown {
  margin: 20px 0;
  padding: 20px;
  background: @main-bg;
  color: @main-color;
  border-radius: @block-border-radius;
  border: 3px solid @error-color;
  .item-shadow;
  font-weight: bold;
  text-align: center;
  font-size: 20px;
}


.error-page {
  width: 600px;
  margin: 40px auto;
  padding: 20px;
  border-radius: @block-border-radius;
  background: @main-bg;
  color: @main-color;
  border: 3px solid @error-color;
  .item-shadow;

  &__header {
    font-size: 40px;
    line-height: 40px;
    font-weight: bold;
    margin-bottom: 10px;
  }

  &__code {
    font-size: 40px;
    font-weight: bold;
  }

  &__title {
    font-size: 20px;
    font-weight: normal;
  }

  &__reason {}
}


.cache-data {
  display: none;
}


.spoiler {
  cursor: pointer;
  background: @main-color;
  transition: background 0.3s ease;

  &:hover {
    background: transparent;
  }
}


.rules {
  padding: 10px 20px;
  margin: 20px 0;
  background: @main-bg;
  color: @main-color;
  border-radius: @block-border-radius;
  .item-shadow;

  &__header {
    font-size: 20px;
    margin-bottom: 10px;
  }

  p {
    margin: 0;
  }

  ul, ol {
    padding: 0;
    list-style-position: inside;
  }
}
/* ... */

